# Cyber_Rayne

./: .gitignore  README.md
.github/workflows/: performance-audit.yml
CMakeProject1/: CMakeLists.txt  README.md  build_project.bat  build_test.bat  run_log.txt
CMakeProject1/assets/enemies/: goblin.txt
CMakeProject1/assets/items/: potion.txt
CMakeProject1/assets/textures/: start.mtl
CMakeProject1/include/: CharacterSelectionSystem.h  EnemyTypes.h  Game.h  GameState.h  Map.h  MenuSystem.h  NPC.h  Player.h  UIManager.h  VulkanRenderer.h  World.h
CMakeProject1/shaders/: vert.spv  vertex_shader.vert
CMakeProject1/src/core/: Game.cpp  GameState.cpp
CMakeProject1/src/entities/: Enemy.cpp  Item.cpp  NPC.cpp  Player.cpp
CMakeProject1/src/graphics/: VulkanRenderer.cpp  VulkanRenderer_temp.cpp  VulkanRenderer_temp2.cpp
CMakeProject1/src/systems/: CharacterSelectionSystem.cpp  UIManager.cpp
CMakeProject1/src/tests/: BattleSystemTest.cpp  CharacterSelectionTest.cpp
CMakeProject1/src/ui/: MenuSystem.cpp
CMakeProject1/tests/: EnemyTypesTest.cpp
CyberRayne/: CMakeLists.txt  build_enemy_test.bat  build_project.bat
CyberRayne/.github/workflows/: performance-audit.yml
CyberRayne/assets/characters/: player.txt
CyberRayne/assets/maps/: starting_area.txt
CyberRayne/assets/spells/: fireball.txt
CyberRayne/assets/ui/: cursor.png~
CyberRayne/include/: BattleSystem.h  CharacterSelectionSystem.h  Enemy.h  Game.h  Item.h  Map.h  MenuSystem.h  Player.h  Spell.h  Tile.h  VulkanRenderer.h  World.h
CyberRayne/shaders/: vert.spv  vertex_shader.vert
CyberRayne/src/: main.cpp
CyberRayne/src/core/: Game.cpp  GameState.cpp  Map.cpp  Tile.cpp  World.cpp
CyberRayne/src/entities/: EnemyTypes.cpp  Player.cpp  Spell.cpp
CyberRayne/src/graphics/: VulkanRenderer.cpp
CyberRayne/src/systems/: BattleSystem.cpp  CharacterSelectionSystem.cpp
CyberRayne/src/tests/: EnemyTypesTest.cpp  VulkanTest.cpp
CyberRayne/src/ui/: MenuSystem.cpp
